Fixed a small bug envolving wrong colors on orders status.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -72,6 +72,10 @@ input:focus{
   color: #20c997;
 }
 
+.text-red-500{
+  color: #dc3545;
+}
+
 /*!********************************** USEFUL SIZES *********************************!*/
 .w-5{
   width: 5%;
